--- a/app/src/main/res/layout/content_crop_sales_orders_list.xml
+++ b/app/src/main/res/layout/content_crop_sales_orders_list.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropFieldsListActivity"
-    tools:showIn="@layout/activity_crop_fields_list">
-
+    tools:context=".activities.CropEstimatesListActivity"
+    tools:showIn="@layout/activity_crop_estimates_list">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/crop_field_recyc_view"
+        android:id="@+id/crop_sales_order_recyc_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_inventory_spinner"
         app:layout_constraintVertical_bias="0.0">
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
