--- a/app/src/main/res/layout/activity_crop_income_expenses_list.xml
+++ b/app/src/main/res/layout/activity_crop_income_expenses_list.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+android:orientation="vertical"
+
     android:background="@color/gray_mh"
-    tools:context=".activities.CropMachinesListActivity">
 
-
+    tools:context=".activities.CropIncomeExpensesListActivity">
 
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="5dp">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/crop_machine_recyc_view"
+        android:id="@+id/crop_income_expense_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
 
         >
-
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
-</RelativeLayout>
+</LinearLayout>
