--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -243,7 +243,8 @@
                     android:id="@+id/txt_crop_task_description"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:textColor="@color/colorPrimary"
+                    android:hint="Enter.."
+                    android:gravity="start"
                     android:textSize="14sp"
                     android:inputType="textMultiLine"
                     android:background="@drawable/input_shapes"
