--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -81,22 +81,20 @@
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="right"
+                      android:gravity="end"
                       android:layout_weight="0.2"
                       android:orientation="horizontal">
 
-                      <ImageView
-                          android:id="@+id/img_crop_cultivation_card_delete"
-                          android:layout_width="24dp"
-                          android:layout_height="24dp"
-                          android:scaleType="fitXY"
-                          android:src="@drawable/delete_btn_gray" />
 
                       <ImageView
-                          android:id="@+id/img_crop_cultivation_card_edit"
-                          android:layout_width="24dp"
-                          android:layout_height="24dp"
-                          android:src="@drawable/arrow_right_gray" />
+                          android:id="@+id/img_crop_cultivation_card_more"
+                          android:layout_width="wrap_content"
+                          android:layout_height="25dp"
+                          android:backgroundTint="@color/black"
+                          android:gravity="end"
+                          android:textColor="@color/darker_gray"
+                          app:srcCompat="@drawable/more_options_icon" />
+
                   </LinearLayout>
               </LinearLayout>
 
@@ -140,7 +138,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="50%"
+                        android:gravity="end"
+                        android:text="50000"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
             <View
