--- a/app/src/main/res/layout/crop_employee_list_card.xml
+++ b/app/src/main/res/layout/crop_employee_list_card.xml
@@ -45,7 +45,6 @@
                                 android:layout_width="60dp"
                                 android:layout_height="80dp"
                                 android:layout_margin="10dp"
-                                android:backgroundTint="@color/black"
                                 tools:src="@drawable/profile" />
 
                             <LinearLayout
@@ -93,7 +92,7 @@
 
 
                                         <ImageView
-                                            android:id="@+id/img_crop_card_more"
+                                            android:id="@+id/img_crop_employee_card_more"
                                             android:layout_width="25dp"
                                             android:layout_height="20dp"
                                             android:backgroundTint="@color/black"
