--- a/app/src/main/res/layout/content_crop_cultivate_list.xml
+++ b/app/src/main/res/layout/content_crop_cultivate_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropCultivationsListActivity"
     tools:showIn="@layout/activity_crop_cultivations_list">
