--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray">
+    android:layout_marginTop="4dp"
+    android:background="@color/light_gray">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,7 +78,8 @@
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:text="Field Preparation"
-                      android:textColor="@color/blackText" />
+                      android:textColor="@color/blackText"
+                      android:textStyle="bold"/>
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
