--- a/app/src/main/res/layout/crop_customer_list_card.xml
+++ b/app/src/main/res/layout/crop_customer_list_card.xml
@@ -12,32 +12,43 @@
         android:background="@color/white"
         android:orientation="vertical">
 
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
             android:layout_marginLeft="6dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="3dp"
             android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="3dp"
+                android:layout_weight="0.1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txt_crop_customer_card_company"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="Kiwanuka Farm Ltd"
+                    android:textColor="#696666"
+                    android:textSize="14dp" />
 
 
-            <ImageView
-                android:id="@+id/img_crop_customer_card_delete"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/ic_delete"
-                android:textSize="22dp" />
+                <TextView
 
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:gravity="end"
+                    android:text="1/1 unpaid"
+                    android:textColor="#696666"
+                    android:textSize="14dp" />
 
-            <ImageView
-                android:id="@+id/img_crop_customer_card_edit"
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/arrow_right_gray"
-                android:textColor="@color/darker_gray"
-                android:textSize="22dp" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/img_crop_customer_card_more"
@@ -62,35 +73,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txt_crop_customer_card_company"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:text="Kiwanuka Farm Ltd"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
-
-
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="25dp"
-                        android:gravity="end"
-                        android:text="1/1 unpaid"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -153,17 +135,9 @@
                         android:layout_height="wrap_content"
                         android:text="John Kiwanuka"
                         android:textColor="#696666"
-
                         android:textSize="14dp" />
 
-                    <TextView
-                        android:layout_width="192dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:text="UGX"
-                        android:textColor="#696666"
-                        android:textSize="14dp"
-                        android:textStyle="bold" />
+
 
                     <TextView
                         android:id="@+id/txt_crop_customer_card_opening_balance"
@@ -173,7 +147,7 @@
                         android:gravity="end"
                         android:paddingLeft="0dp"
                         android:text="1762156000"
-                        android:textColor="#696666"
+                        android:textColor="@color/red"
                         android:textSize="14dp" />
 
 
