--- a/app/src/main/res/layout/crop_estimate_list_card.xml
+++ b/app/src/main/res/layout/crop_estimate_list_card.xml
@@ -115,6 +115,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/layout_crop_estimate_card_reference_number"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
