--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -80,6 +80,7 @@
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:text="Field Preparation"
+                      android:textStyle="bold"
                       android:textColor="@color/blackText" />
                   <LinearLayout
                       android:layout_width="0dp"
@@ -88,18 +89,13 @@
                       android:layout_weight="0.2"
                       android:orientation="horizontal">
 
-                      <ImageView
-                          android:id="@+id/img_crop_fertilizer_application_card_delete"
-                          android:layout_width="24dp"
-                          android:layout_height="24dp"
-                          android:scaleType="fitXY"
-                          android:src="@drawable/delete_btn_gray" />
+
 
                       <ImageView
-                          android:id="@+id/img_crop_fertilizer_application_card_edit"
+                          android:id="@+id/img_crop_fertilizer_application_card_more"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
-                          android:src="@drawable/arrow_right_gray" />
+                          android:src="@drawable/more_options_icon" />
                   </LinearLayout>
               </LinearLayout>
               <View
@@ -171,6 +167,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="UGX 467000"
+                        android:textAlignment="textEnd"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
