--- a/app/src/main/res/layout/activity_crop_machines_list.xml
+++ b/app/src/main/res/layout/activity_crop_machines_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_mh"
+    android:background="@color/light_gray"
     tools:context=".activities.CropMachinesListActivity">
 
 
@@ -22,7 +22,7 @@
         android:id="@+id/crop_machine_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
 
         >
 
