--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -27,9 +27,11 @@
             android:layout_marginBottom="5dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginRight="10dp">
 
             <TextView
 
@@ -42,11 +44,10 @@
 
                 <Spinner
                     android:id="@+id/sp_crop_crop"
-                    android:layout_width="165dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
+
+
                     android:background="@drawable/input_shapes"
                     android:entries="@array/crops_list"
                     android:textColor="@color/colorPrimary"
@@ -55,11 +56,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_weight="1">
 
             <TextView
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/variety"
                 android:textColor="@color/colorPrimary"
@@ -72,7 +74,6 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
-                android:layout_marginLeft="5dp"
                 android:background="@drawable/input_shapes"
                 android:textSize="14sp"
 
@@ -89,14 +90,15 @@
             android:layout_marginBottom="5dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_weight="1"
                 android:layout_marginRight="10dp">
 
             <TextView
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Cropping Year"
                 android:textColor="@color/colorPrimary"
@@ -105,13 +107,12 @@
 
             <EditText
                 android:id="@+id/txt_crops_cropping_year"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
                 android:background="@drawable/input_shapes"
                 android:inputType="number"
-                android:layout_marginRight="10dp"
                 android:textSize="14sp"
                 />
             </LinearLayout>
@@ -119,6 +120,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -148,8 +150,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_marginBottom="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            >
 
             <TextView
 
@@ -173,6 +182,35 @@
                 />
 
         </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                >
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:text="@string/season"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorPrimary"
+                    />
+
+                <Spinner
+                    android:id="@+id/sp_crops_season"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:entries="@array/sp_crops_season"
+                    android:background="@drawable/input_shapes"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -180,10 +218,11 @@
             android:orientation="horizontal"
             android:layout_marginBottom="5dp">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginRight="15dp"
+               android:layout_weight="1"
+                android:layout_marginRight="10dp"
                 >
 
             <TextView
@@ -191,14 +230,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/date_sown"
-                android:layout_marginRight="4dp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/txt_crops_date_sown"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
@@ -211,7 +249,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_weight="1">
             <TextView
 
                 android:layout_width="wrap_content"
@@ -241,8 +280,9 @@
             android:orientation="horizontal"
             android:layout_marginBottom="5dp">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_marginRight="10dp"
                 >
@@ -259,7 +299,7 @@
 
             <EditText
                 android:id="@+id/txt_crops_operator"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
@@ -270,10 +310,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
             <TextView
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/operator_cost"
                 android:textColor="@color/colorPrimary"
@@ -318,9 +359,10 @@
             android:layout_marginBottom="5dp">
 
             <LinearLayout
-                android:layout_width="163dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
                 android:orientation="vertical">
 
 
@@ -336,16 +378,15 @@
 
                 <Spinner
                     android:id="@+id/sp_crops_seed_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_shapes"
-                    android:textColor="@color/colorPrimary"
-
                     android:textSize="14sp" />
             </LinearLayout>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
             <TextView
 
