--- a/app/src/main/res/layout/crop_income_expense_list_card.xml
+++ b/app/src/main/res/layout/crop_income_expense_list_card.xml
@@ -9,9 +9,8 @@
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="6dp">
 
 
 
@@ -42,7 +41,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="Irrigation Pump"
-                        android:textColor="#696666"
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold"
                         android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
@@ -188,9 +188,7 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/input_shapes">
+                    android:background="@drawable/input_shapes_green">
 
                     <TextView
                         android:layout_width="wrap_content"
