--- a/app/src/main/res/layout/crops_list_card.xml
+++ b/app/src/main/res/layout/crops_list_card.xml
@@ -32,7 +32,7 @@
                         android:background="@color/white"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+
                         >
 
                         <LinearLayout
@@ -41,8 +41,7 @@
                             android:layout_height="wrap_content"
 
                             android:layout_marginLeft="6dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginBottom="3dp">
+                            >
 
                             <LinearLayout
                                 android:orientation="horizontal"
@@ -50,11 +49,11 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.1"
                                 android:layout_marginLeft="6dp"
-                                android:layout_marginTop="3dp">
+                               >
 
                                 <TextView
                                     android:id="@+id/txt_crop_card_name"
-                                    android:textSize="14dp"
+                                    android:textSize="16dp"
                                     android:textColor="#696666"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -68,7 +67,7 @@
                                     android:layout_weight="1"
                                     android:text="(Asla Fg)"
                                     android:textColor="#696666"
-                                    android:textSize="14dp" />
+                                    android:textSize="16dp" />
 
 
                             </LinearLayout>
@@ -104,7 +103,6 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="6dp"
                                     android:layout_marginLeft="6dp"
                                     android:layout_marginTop="3dp"
                                     android:orientation="horizontal">
@@ -137,9 +135,7 @@
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginBottom="6dp"
                                         android:layout_marginLeft="6dp"
-
                                         android:orientation="horizontal">
 
                                         <TextView
@@ -182,9 +178,45 @@
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginBottom="6dp"
                                         android:layout_marginLeft="6dp"
+                                        android:orientation="horizontal">
 
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:text="Cropping Year : "
+                                            android:textColor="#696666"
+                                            android:textStyle="bold"
+                                            android:textSize="14dp" />
+
+                                        <TextView
+                                            android:id="@+id/txt_crop_card_cropping_year"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+
+                                            android:text="2019-12-24"
+                                            android:textColor="#696666"
+                                            android:textSize="14dp" />
+
+                                        <TextView
+                                            android:id="@+id/txt_crop_card_season"
+                                            android:textSize="14dp"
+                                            android:layout_marginLeft="10dp"
+                                            android:textColor="#696666"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:text="First Season" />
+
+
+                                    </LinearLayout>
+
+
+                                </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="6dp"
                                         android:orientation="horizontal">
 
                                         <TextView
@@ -216,14 +248,13 @@
                                     </LinearLayout>
 
 
-                                </LinearLayout>
 
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="6dp"
                                         android:layout_marginLeft="6dp"
-                                        android:layout_marginTop="3dp"
+
                                         android:orientation="horizontal">
 
                                         <TextView
