--- a/app/src/main/res/layout/activity_crop_income__expense_manager.xml
+++ b/app/src/main/res/layout/activity_crop_income__expense_manager.xml
@@ -524,8 +524,8 @@
                     android:textStyle="bold"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/txt_crop_income_expense_customer_supplier"
+                <Spinner
+                    android:id="@+id/spinner_crop_income_expense_customer_supplier"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorPrimary"
