--- a/app/src/main/res/layout/activity_crop_spraying_manager.xml
+++ b/app/src/main/res/layout/activity_crop_spraying_manager.xml
@@ -330,6 +330,7 @@
 
                         />
                     <TextView
+                        android:id="@+id/txt_crop_spraying_rate_units"
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
