--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,5 +83,6 @@
 
     <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
         <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
