--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -46,8 +46,7 @@
                     android:id="@+id/sp_crop_crop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
-
+                    style="@style/spinnerStyle"
                     android:background="@drawable/input_shapes"
                     android:entries="@array/crops_list"
                     android:textColor="@color/colorPrimary"
