--- a/app/src/main/res/layout/content_crop_products_list.xml
+++ b/app/src/main/res/layout/content_crop_products_list.xml
@@ -8,12 +8,18 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropProductsListActivity"
     tools:showIn="@layout/activity_crop_products_list">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_product_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,4 +28,6 @@
         app:layout_constraintVertical_bias="0.0">
 
     </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
