--- a/app/src/main/res/layout/crop_income_expense_list_card.xml
+++ b/app/src/main/res/layout/crop_income_expense_list_card.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp"
+
             android:orientation="horizontal">
 
 
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp">
+                    >
 
                     <TextView
                         android:id="@+id/txt_crop_income_expense_card_item"
@@ -194,7 +194,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Amount :"
-                        android:textColor="#696666"
+                        android:textColor="@color/whiteColor"
                         android:textStyle="bold"
                         android:textSize="14dp" />
 
@@ -202,7 +202,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="UGX "
-                        android:textColor="#696666"
+                        android:textColor="@color/whiteColor"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
                         android:textSize="14sp" />
@@ -212,7 +212,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="200,000"
-                        android:textColor="#696666"
+                        android:textColor="@color/whiteColor"
 
                         android:textSize="14sp" />
                     <LinearLayout
@@ -224,7 +224,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Date :"
-                        android:textColor="#696666"
+                        android:textColor="@color/whiteColor"
                         android:textStyle="bold"
                         android:textSize="14dp"
                         android:layout_marginLeft="4dp"
@@ -237,7 +237,7 @@
                         android:text="12-03-2019"
                         android:gravity="end"
 
-                        android:textColor="#696666"
+                        android:textColor="@color/whiteColor"
                         android:textSize="14dp" />
 
                     </LinearLayout>
