--- a/app/src/main/res/layout/crop_product_list_card.xml
+++ b/app/src/main/res/layout/crop_product_list_card.xml
@@ -8,15 +8,8 @@
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:orientation="horizontal">
+        android:layout_margin="5dp">
 
 
 
@@ -40,6 +33,7 @@
                         android:layout_marginRight="5dp"
                         android:text="Water Nipples "
                         android:textColor="#696666"
+                       android:textStyle="bold"
                         android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
@@ -204,7 +198,7 @@
 
 
             </LinearLayout>
-        </LinearLayout>
+
 
 
 
